# generated-adventures

./: .env.example  .gitignore  README.md  README_image_server.md  README_tts.md  image_server.py  main.py  pyproject.toml  test_image_generation.py
core/: config.py  game.py  generator.py  image_backends.py  models.py  persistence.py  tts_backends.py  voice_casting.py
tests/: generator_test.py  models_test.py  persistence_test.py  test_character_changes.py  test_image_generation.py  test_recap.py
webapp/: main.py
webapp/components/: adventure.py  character_changes.py  character_display.py  characters.py  dm_notes.py  hero_creation.py  party.py  recap.py  resume.py  scenarios.py
webapp/services/: game_flow.py
webapp/utils/: __init__.py  error_handlers.py  pdf_generator.py
