[project]
name = "generated-adventures"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "pydantic-ai>=0.6.2",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "nicegui>=1.4.0",
    "uvicorn>=0.35.0",
    "google-generativeai>=0.7.2",
    "Pillow>=10.5.0",
    "reportlab>=4.0.0",
]

[project.optional-dependencies]
# Local image generation (FLUX Kontext)
# FLUX.1 Kontext [dev] requires diffusers >= 0.34 for FluxKontextPipeline.
local-image = [
    "torch>=2.0.0",
    "diffusers>=0.34.0",
    "transformers>=4.40.0",
    "accelerate>=0.28.0",
    "safetensors>=0.4.0",
    "sentencepiece>=0.2.0",
    "protobuf>=4.0.0",
]

[tool.setuptools]
packages = ["core", "webapp"]
