[project]
name = "generated-adventures"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "pydantic-ai>=0.6.2",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "nicegui>=1.4.0",
    "uvicorn>=0.35.0",
    "google-generativeai>=0.7.2",
    "Pillow>=10.5.0",
    "reportlab>=4.0.0",
    "diffusers>=0.35.0",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "transformers>=4.57.3",
    "accelerate>=1.12.0",
    "safetensors>=0.7.0",
    "sentencepiece>=0.2.1",
    "protobuf>=5.29.5",
    "gguf>=0.10.0",
    "optimum-quanto>=0.2.0",
]

# On Windows, torch comes from the PyTorch CUDA 12.6 wheel index, and
# torchvision uses the CPU wheel — the CUDA build has a broken _C extension
# on Windows/Python 3.13 (torchvision::nms operator not found), but the CPU
# build works fine since we only need it for InterpolationMode in transformers.
#
# On macOS (Apple Silicon) the PyTorch CUDA/CPU indexes have no wheels, so we
# let torch/torchvision resolve from the default PyPI index, which ships
# arm64 builds with Metal (MPS) acceleration.
[tool.uv.sources]
torch = [
    { index = "pytorch-cu126", marker = "sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cpu", marker = "sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.setuptools]
packages = ["core", "webapp"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
